# Albert

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  chat_history.json  dockerfile  pyproject.toml  requirements.txt  usr-learning.md
infrastructure/: main.tf  outputs.tf  variables.tf
lambda_gateway/: Cargo.toml
lambda_gateway/src/: main.rs
lambda_worker/: Cargo.toml
lambda_worker/src/: article_handler.rs  bedrock_client.rs  discord_client.rs  handlers.rs  main.rs
python_llm/: pyproject.toml  requirements.txt
python_llm/src/: main.py  model_chain.py
python_llm/src/utils/: output_structures.py  prompts.py
roadmap/: albert_roadmap.md
rust_bot/: Cargo.toml
rust_bot/src/: article_handler.rs  bedrock_client.rs  bot.rs  bot_functions.rs  export.rs  handle_events.rs  main.rs  message_utils.rs  python_runner.rs  read_and_write.rs  response_target.rs  worker_and_job.rs
src/: export.rs  main.rs
