[package]
name = "lambda_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
aws-smithy-types = "1"
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
