[package]
name = "lambda_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.14"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
readability = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"
