[tool.poetry]
name = "python-llm"
version = "0.1.0"
description = "LLM component of Discor Bot Albert"
authors = ["Thorpe7 <maxwell.thorpe7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-huggingface = "^0.1.2"
textstat = "^0.7.5"
langchain = "^0.3.22"
accelerate = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
