[project]
name = "albert"
version = "0.1.0"
description = ""
authors = [
    {name = "Thorpe7",email = "maxwell.thorpe7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.49.1",
    "langchain>=0.3.24",
    "langchain-huggingface>=0.1.2",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "textstat>=0.7.5",
    "transformers>=4.50.3",
    # torch must be installed separately from the nightly cu128 index:
    #   pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu128
    # This is required for RTX 50-series (Blackwell / sm_120) GPU support.
    # Once a stable PyTorch release supports sm_120, pin that version here instead.
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
