[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15"
time = { version = "0.3", features = ["macros", "formatting"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"]}