[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15"
time = { version = "0.3", features = ["macros", "formatting"] }
time-tz = "2.0.0"
anyhow = "1.0.98"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
readability = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"